@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-17T16:08:08Z",
-  "count_outdated" : 2226,
-  "uniques_outdated" : 707,
+  "timestamp" : "2024-01-19T00:31:48Z",
+  "count_outdated" : 2227,
+  "uniques_outdated" : 708,
   "count" : 2261,
   "uniques" : 718,
   "views" : [
-    {
-      "timestamp": "2024-01-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-06T00:00:00Z",
       "count": 1,
