@@ -1,12 +1,7 @@
 {
-  "count": 35,
-  "uniques": 10,
+  "count": 34,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2024-01-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-06T00:00:00Z",
       "count": 1,
