@@ -1,3 +1,12 @@
+2024-01-19T00:31:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7577739748 # 36
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
+* notice: last 14d: unq all: 9 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 707 2226 / 718 2261
+* notice: next accum: outdated-unq outdated-all / unq all: 708 2227 / 718 2261
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-04] / []
+
 2024-01-17T16:08:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7558512478 # 32
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
